# remdes

./: .gitignore  Cargo.toml  LICENSE  README.md
client/: Cargo.toml  build.rs
client/.cargo/: config.toml
client/shaders/: simple.frag  simple.vert
client/src/: main.rs
client/src/base/: cfg.rs  fps.rs  mod.rs  net.rs  tex.rs  util.rs
server/: Cargo.toml
server/src/: main.rs
server/src/base/: cfg.rs  handle.rs  mod.rs  util.rs
src/: lib.rs  util.rs
