[package]
name = "remdes"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["client", "server"]

[workspace.dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
clap = { version = "4.5.53", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8.21"
ctrlc = "3.5.1"
env_logger = "0.11.8"
log = "0.4.28"
lz4 = "1.28.1"
parking_lot = "0.12.5"
spin_sleep = "1.3.3"
waitx = "0.3.0"

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }

[profile.release]
lto = true
codegen-units = 1
